[gd_scene load_steps=20 format=1]

[ext_resource path="res://story/Level1.gd" type="Script" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Spike.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/UI.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Collectibles_Letter.gd" type="Script" id=5]
[ext_resource path="res://assets/Cave-Story.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://scripts/Next_level.gd" type="Script" id=7]
[ext_resource path="res://assets/Drapeau.tex" type="Texture" id=8]
[ext_resource path="res://scenes/deadZone.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/Panneau.tex" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 84.8967, 47.5322 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 50, 50 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 44.618, 44.778 )

[sub_resource type="DynamicFont" id=4]

font/size = 64
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 6 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 44.618, 44.778 )

[sub_resource type="DynamicFont" id=6]

font/size = 64
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 6 )

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 26.1604, 29.7373 )

[sub_resource type="RectangleShape2D" id=9]

custom_solver_bias = 0.0
extents = Vector2( 40, 40 )

[sub_resource type="RectangleShape2D" id=8]

custom_solver_bias = 0.0
extents = Vector2( 40, 40 )

[node name="Level1-Tutorial" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]

editor/display_folded = true

[node name="Obstacle" type="Node2D" parent="."]

editor/display_folded = true

[node name="jump" type="StaticBody2D" parent="Obstacle"]

editor/display_folded = true
transform/pos = Vector2( 840, -32.8937 )
transform/scale = Vector2( 7.5, 0.847072 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 85.6481, 47.7047 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Polygon2D" type="Polygon2D" parent="Obstacle/jump"]

transform/scale = Vector2( 3.41209, 1.86204 )
polygon = Vector2Array( 0, 0, 50, 0, 50, 50, 0, 50 )
uv = Vector2Array(  )
color = Color( 1, 1, 1, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacle/jump"]

transform/pos = Vector2( 85.6481, 47.7047 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="row_of_spike" type="Node2D" parent="Obstacle"]

editor/display_folded = true
transform/pos = Vector2( -835, -696 )
__meta__ = {
"_edit_group_": true
}

[node name="Spike" parent="Obstacle/row_of_spike" instance=ExtResource( 3 )]

transform/pos = Vector2( 2985.97, 735.402 )

[node name="Spike1" parent="Obstacle/row_of_spike" instance=ExtResource( 3 )]

transform/pos = Vector2( 3028.15, 735.402 )

[node name="Spike2" parent="Obstacle/row_of_spike" instance=ExtResource( 3 )]

transform/pos = Vector2( 3070.19, 735.427 )

[node name="Spike3" parent="Obstacle/row_of_spike" instance=ExtResource( 3 )]

transform/pos = Vector2( 3112.04, 735.402 )

[node name="Spike4" parent="Obstacle/row_of_spike" instance=ExtResource( 3 )]

transform/pos = Vector2( 3154.04, 735.402 )

[node name="Spike5" parent="Obstacle/row_of_spike" instance=ExtResource( 3 )]

transform/pos = Vector2( 3196.04, 735.402 )

[node name="Spike6" parent="Obstacle/row_of_spike" instance=ExtResource( 3 )]

transform/pos = Vector2( 3238.04, 735.402 )

[node name="Spike7" parent="Obstacle/row_of_spike" instance=ExtResource( 3 )]

transform/pos = Vector2( 3280.04, 735.402 )

[node name="Spike8" parent="Obstacle/row_of_spike" instance=ExtResource( 3 )]

transform/pos = Vector2( 3322.04, 735.402 )

[node name="Spike9" parent="Obstacle/row_of_spike" instance=ExtResource( 3 )]

transform/pos = Vector2( 3364.04, 735.402 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="UI" parent="CanvasLayer" instance=ExtResource( 4 )]

[node name="Floor" type="StaticBody2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 560, 40 )
transform/scale = Vector2( 30, 0.1875 )
input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 29.6784, 49.9302 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Polygon2D" type="Polygon2D" parent="Floor"]

transform/pos = Vector2( -20.6492, -0.00012207 )
polygon = Vector2Array( 0, 0, 100, 0, 100, 100, 0, 100 )
uv = Vector2Array(  )
color = Color( 1, 1, 1, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]

transform/pos = Vector2( 29.6784, 49.9302 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="Letters" type="Node2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 1178.87, 684.502 )

[node name="Lettre J" type="Node2D" parent="Letters"]

editor/display_folded = true
transform/pos = Vector2( -878.87, -664.502 )
script/script = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="Letters/Lettre J"]

transform/scale = Vector2( 0.567774, 0.557599 )
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Letters/Lettre J/Area2D"]

shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="Label" type="Label" parent="Letters/Lettre J"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -18.0
margin/top = -18.0
margin/right = 22.0
margin/bottom = 22.0
custom_fonts/font = SubResource( 4 )
text = "J"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="Letters/Lettre J"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = false

[node name="Lettre U" type="Node2D" parent="Letters"]

editor/display_folded = true
transform/pos = Vector2( -438.87, -664.502 )
script/script = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="Letters/Lettre U"]

editor/display_folded = true
transform/scale = Vector2( 0.567774, 0.557599 )
input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Letters/Lettre U/Area2D"]

shape = SubResource( 5 )
trigger = false
_update_shape_index = 0

[node name="Label" type="Label" parent="Letters/Lettre U"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -18.0
margin/top = -18.0
margin/right = 22.0
margin/bottom = 22.0
custom_fonts/font = SubResource( 6 )
text = "U"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Timer" type="Timer" parent="Letters/Lettre U"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = false

[node name="Lettre M" type="Node2D" parent="Letters"]

editor/display_folded = true
transform/pos = Vector2( -598.87, -664.502 )
script/script = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="Letters/Lettre M"]

editor/display_folded = true
transform/scale = Vector2( 0.567774, 0.557599 )
input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Letters/Lettre M/Area2D"]

shape = SubResource( 5 )
trigger = false
_update_shape_index = 0

[node name="Label" type="Label" parent="Letters/Lettre M"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -18.0
margin/top = -18.0
margin/right = 22.0
margin/bottom = 22.0
custom_fonts/font = SubResource( 6 )
text = "M"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Timer" type="Timer" parent="Letters/Lettre M"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = false

[node name="Lettre P" type="Node2D" parent="Letters"]

editor/display_folded = true
transform/pos = Vector2( -738.87, -664.502 )
script/script = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="Letters/Lettre P"]

editor/display_folded = true
transform/scale = Vector2( 0.567774, 0.557599 )
input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Letters/Lettre P/Area2D"]

shape = SubResource( 5 )
trigger = false
_update_shape_index = 0

[node name="Label" type="Label" parent="Letters/Lettre P"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -18.0
margin/top = -18.0
margin/right = 22.0
margin/bottom = 22.0
custom_fonts/font = SubResource( 6 )
text = "P"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Timer" type="Timer" parent="Letters/Lettre P"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = false

[node name="Lettre D" type="Node2D" parent="Letters"]

editor/display_folded = true
transform/pos = Vector2( 201.13, -744.502 )
script/script = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="Letters/Lettre D"]

editor/display_folded = true
transform/scale = Vector2( 0.567774, 0.557599 )
input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Letters/Lettre D/Area2D"]

shape = SubResource( 5 )
trigger = false
_update_shape_index = 0

[node name="Label" type="Label" parent="Letters/Lettre D"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -20.0
margin/top = -20.0
margin/right = 20.0
margin/bottom = 20.0
custom_fonts/font = SubResource( 6 )
text = "D"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Timer" type="Timer" parent="Letters/Lettre D"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = false

[node name="Lettre A" type="Node2D" parent="Letters"]

editor/display_folded = true
transform/pos = Vector2( 341.13, -744.502 )
script/script = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="Letters/Lettre A"]

editor/display_folded = true
transform/scale = Vector2( 0.567774, 0.557599 )
input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Letters/Lettre A/Area2D"]

shape = SubResource( 5 )
trigger = false
_update_shape_index = 0

[node name="Label" type="Label" parent="Letters/Lettre A"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -18.0
margin/top = -18.0
margin/right = 22.0
margin/bottom = 22.0
custom_fonts/font = SubResource( 6 )
text = "A"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Timer" type="Timer" parent="Letters/Lettre A"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = false

[node name="Lettre S" type="Node2D" parent="Letters"]

editor/display_folded = true
transform/pos = Vector2( 481.13, -744.502 )
script/script = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="Letters/Lettre S"]

editor/display_folded = true
transform/scale = Vector2( 0.567774, 0.557599 )
input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Letters/Lettre S/Area2D"]

shape = SubResource( 5 )
trigger = false
_update_shape_index = 0

[node name="Label" type="Label" parent="Letters/Lettre S"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -18.0
margin/top = -18.0
margin/right = 22.0
margin/bottom = 22.0
custom_fonts/font = SubResource( 6 )
text = "S"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Timer" type="Timer" parent="Letters/Lettre S"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = false

[node name="Lettre H" type="Node2D" parent="Letters"]

editor/display_folded = true
transform/pos = Vector2( 661.13, -744.502 )
script/script = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="Letters/Lettre H"]

editor/display_folded = true
transform/scale = Vector2( 0.567774, 0.557599 )
input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Letters/Lettre H/Area2D"]

shape = SubResource( 5 )
trigger = false
_update_shape_index = 0

[node name="Label" type="Label" parent="Letters/Lettre H"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -18.0
margin/top = -18.0
margin/right = 22.0
margin/bottom = 22.0
custom_fonts/font = SubResource( 6 )
text = "H"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Timer" type="Timer" parent="Letters/Lettre H"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = false

[node name="Drapeau" type="Node2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 2900, 20 )
script/script = ExtResource( 7 )
path = "res://levels/Level2.tscn"

[node name="Sprite" type="Sprite" parent="Drapeau"]

texture = ExtResource( 8 )

[node name="Area2D" type="Area2D" parent="Drapeau"]

input/pickable = true
shapes/0/shape = SubResource( 7 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -5.59438, 2.27272 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Drapeau/Area2D"]

transform/pos = Vector2( -5.59438, 2.27272 )
shape = SubResource( 7 )
trigger = false
_update_shape_index = 0

[node name="Node2D" parent="." instance=ExtResource( 9 )]

transform/pos = Vector2( 1340, 180 )
transform/scale = Vector2( 100, 1 )

[node name="Debut" type="Area2D" parent="."]

transform/pos = Vector2( 0, -14 )
transform/scale = Vector2( 1, 1.4375 )
input/pickable = true
shapes/0/shape = SubResource( 9 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Debut"]

shape = SubResource( 9 )
trigger = false
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="Debut"]

transform/pos = Vector2( -7.15256e-07, 23.6522 )
transform/scale = Vector2( 0.625, 0.524457 )
texture = ExtResource( 10 )

[node name="Dash" type="Area2D" parent="."]

transform/pos = Vector2( 1060, -80 )
transform/scale = Vector2( 1, 1.4375 )
input/pickable = true
shapes/0/shape = SubResource( 8 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dash"]

shape = SubResource( 8 )
trigger = false
_update_shape_index = 0

[node name="Sprite1" type="Sprite" parent="Dash"]

transform/pos = Vector2( 0, 27.8261 )
transform/scale = Vector2( 0.625, 0.524457 )
texture = ExtResource( 10 )

[node name="DashNoob" type="Area2D" parent="."]

transform/pos = Vector2( 2080, -80 )
transform/scale = Vector2( 1, 1.4375 )
input/pickable = true
shapes/0/shape = SubResource( 8 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DashNoob"]

shape = SubResource( 8 )
trigger = false
_update_shape_index = 0

[node name="Sprite2" type="Sprite" parent="DashNoob"]

transform/pos = Vector2( 0, 27.8261 )
transform/scale = Vector2( 0.625, 0.524457 )
texture = ExtResource( 10 )

[node name="Jump" type="Area2D" parent="."]

transform/pos = Vector2( 820, 20 )
transform/scale = Vector2( 0.8125, 0.5 )
input/pickable = true
shapes/0/shape = SubResource( 8 )
shapes/0/transform = Matrix32( 0.822449, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Jump"]

transform/scale = Vector2( 0.822449, 1 )
shape = SubResource( 8 )
trigger = false
_update_shape_index = 0

[node name="Sprite3" type="Sprite" parent="Jump"]

transform/scale = Vector2( 0.769231, 1.50781 )
texture = ExtResource( 10 )

[connection signal="timeout" from="Letters/Lettre J/Timer" to="Letters/Lettre J" method="_on_Timer_timeout"]

[connection signal="timeout" from="Letters/Lettre U/Timer" to="Letters/Lettre U" method="_on_Timer_timeout"]

[connection signal="timeout" from="Letters/Lettre M/Timer" to="Letters/Lettre M" method="_on_Timer_timeout"]

[connection signal="timeout" from="Letters/Lettre P/Timer" to="Letters/Lettre P" method="_on_Timer_timeout"]

[connection signal="timeout" from="Letters/Lettre D/Timer" to="Letters/Lettre D" method="_on_Timer_timeout"]

[connection signal="timeout" from="Letters/Lettre A/Timer" to="Letters/Lettre A" method="_on_Timer_timeout"]

[connection signal="timeout" from="Letters/Lettre S/Timer" to="Letters/Lettre S" method="_on_Timer_timeout"]

[connection signal="timeout" from="Letters/Lettre H/Timer" to="Letters/Lettre H" method="_on_Timer_timeout"]

[connection signal="body_enter" from="Drapeau/Area2D" to="Drapeau" method="_on_Area2D_body_enter"]

[connection signal="body_enter" from="Debut" to="." method="_on_Debut_body_enter"]

[connection signal="body_enter" from="Dash" to="." method="_on_Dash_body_enter"]

[connection signal="body_enter" from="DashNoob" to="." method="_on_DashNoob_body_enter"]

[connection signal="body_enter" from="Jump" to="." method="_on_Jump_body_enter"]


